# manim-mcp-server

./: .dockerignore  Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt
src/: manim_server.py
src/media/manim_tmp/: scene.py
src/media/manim_tmp/media/videos/scene/1080p60/partial_movie_files/SimpleScene/: partial_movie_file_list.txt
